# Drasil

./: .commit-hash  .gitattributes  .gitignore  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodeOfConduct.md  Enginenotes.txt  LICENSE  PR_4223_ANALYSIS.md  README.md  done  index.html  report.html
Brooks/: GOOLFinallyTagless.cabal  Helpers.hs  New.hs  NewLanguageRenderer.hs  README.md
Brooks/Example/: FileTests.hs  HelloWorld.hs  Helper.hs  Main.hs  Observer.hs  PatternTest.hs
Brooks/LanguageRenderer/: NewCSharpRenderer.hs  NewCppRenderer.hs  NewJavaRenderer.hs  NewPythonRenderer.hs
Dan/Proto/: ASTC.hs  ASTCode.hs  ASTHTML.hs  ASTInternal.hs  ASTInternal_MK2.hs  ASTPlain.hs  ASTTeX.hs  ASTTex.hs  ASTURI.hs  Body.hs  Body1.hs  Body1_MK2.hs  Body2.hs  Chunk.hs  Config.hs  EqChunk.hs  Example1.hs  Example2.hs  ExprTools.hs  Format.hs  Gen.hs  HTMLHelpers.hs  Helpers.hs  Instances.hs  LPM.w  LayoutObjs.hs  LitSciSoft.cabal  Main.hs  Main_MK2.hs  PCMBody.hs  PCMExample.hs  PCMUnits.hs  PrintC.hs  PrintHTML.hs  PrintPlain.hs  PrintTeX.hs  PrintTex.hs  ReaderTest.hs  RecipeTools.hs  Reference.hs  (+27 more)
Dan/Proto/Mark II/: ASTInternal.hs  ASTInternal_MK2.hs  ASTTeX.hs  ASTTeX_MK2.hs  Body1_MK2.hs  Chunk.hs  Chunk_MK2.hs  Config_MK2.hs  Example1.hs  Example1_MK2.hs  Gen.hs  Gen_MK2.hs  Helpers_MK2.hs  Main.hs  Main_MK2.hs  PrintTeX.hs  PrintTeX_MK2.hs  SI_Units.hs  SI_Units_MK2.hs  ToTeX_MK2.hs
Dan/Proto/Obsolete/: ASTC.hs  ASTDocument.hs  ASTTex.hs  Body.hs  Body2.hs  Config.hs  Example2.hs  LPM - Copy.w  Main.hs  PCM_SRS - Copy.tex  PCM_SRS.tex  PrintPlain.hs  PrintTex.hs  SRS - Copy.tex  SRS.tex  ToPlain.hs  clean.bat
code/: .flake8  .hlint.yaml  Drasil.cabal  Drasil.md  Lang_fixed.hs  Makefile  Mermaid  README.md  README.txt  build_log.txt  ci_fstep  code_build.sh  comprehensive_fix.py  countCommand.txt  drasil-code.cabal  drasil-data.cabal  drasil.cabal  final_comprehensive_fix.py  fix_patterns.sed  hie.yaml  log_check.sh  multivector_example.hs  multivector_quick_guide.hs  package.yaml  pr_label_update.py  pr_label_update.sh  rn.sh  shell.nix  stack.yaml  test.txt  tex_build.sh
code/CodeGen/: codegen.cabal  filename.txt  stack.yaml
code/CodeGen/Test/: HelloWorld.hs  Helper.hs  Main.hs  Observer.hs
code/Data/: drasil-data.cabal  stack.yaml
code/Data/Drasil/: Authors.hs  Changes.hs  Citations.hs  Constraints.hs  Modules.hs  People.hs  Phrase.hs  Plurals.hs  README.md  SI_Units.hs  SentenceStructure.hs  SentenceStructures.hs  Utils.hs
code/Example/: drasil-example.cabal  stack.yaml
code/Example/Drasil/: .Main.hs.swp  BibTeX HTML citations.hs  Concepts.hs  DocumentLanguage.hs  GeneralSystDesc.hs  GlassBRBody1.hs  GlassBRMain.hs  HGHC.hs  HeatTransfer.hs  Introduction.hs  Language.Drasil.SI_Units2.hs  Main.hs  Modules.hs  OrganizationOfSRS.hs  README.md  (+11 more)
code/Language/: Drasil.hs  README.md  README.txt  drasil-lang.cabal  stack.yaml
code/SRS/: SWHS_SRS.tex
code/TraceyGraph/: allvsr.dot  avsall.dot  refvsref.dot
code/Website/: SWHS_SRS.css  SWHS_SRS.html
code/analysis/: DataTable.csv
code/datafiles/: README.md
code/drasil-artifacts/: package.yaml
code/drasil-assets/: package.yaml  stack.yaml
code/drasil-build/: README.md  drasil-build.cabal  package.yaml  stack.yaml
code/drasil-build-artifacts/: .gitignore  README.md  package.yaml  stack.yaml
code/drasil-code/: README.md  ShallowFileAnalysis.md  drasil-code.cabal  package.yaml  stack.yaml
code/drasil-code-base/: README.md  drasil-code-base.cabal  package.yaml  stack.yaml
code/drasil-codeLang/: README.md  package.yaml  stack.yaml
code/drasil-data/: README.md  drasil-data.cabal  drasil-data.cabal.bak  package.yaml  stack.yaml
code/drasil-data-formats/: package.yaml
code/drasil-database/: README.md  drasil-database.cabal  package.yaml  stack.yaml
code/drasil-dev/: drasil-dev.cabal  stack.yaml
code/drasil-docLang/: README.md  drasil-docLang.cabal  drasil-docLang.cabal.bak  package.yaml  stack.yaml
code/drasil-example/: README.md  drasil-example.cabal  package.yaml  stack.yaml
code/drasil-file-handling/: package.yaml
code/drasil-gen/: README.md  drasil-gen.cabal  package.yaml  stack.yaml
code/drasil-gool/: drasil-gool.cabal  drasil-gool.cabal.bak  package.yaml  stack.yaml
code/drasil-lang/: README.md  drasil-lang.cabal  drasil-lang.cabal.bak  package.yaml  stack.yaml
code/drasil-lesson-plan/: package.yaml  stack.yaml
code/drasil-makefile/: README.md  package.yaml
code/drasil-meta-analysis/: package.yaml
code/drasil-metadata/: README.md  drasil-metadata.cabal  package.yaml  stack.yaml
code/drasil-metadb/: package.yaml  stack.yaml
code/drasil-printers/: README.md  drasil-printers.cabal  package.yaml  stack.yaml
code/drasil-printing/: package.yaml  stack.yaml
code/drasil-srs/: package.yaml
code/drasil-sysinfo/: README.md  package.yaml  stack.yaml
code/drasil-system/: package.yaml  stack.yaml
code/drasil-testing-kit/: package.yaml
code/drasil-theory/: README.md  drasil-theory.cabal  package.yaml  stack.yaml
code/drasil-utils/: README.md  drasil-utils.cabal  package.yaml  stack.yaml
code/drasil-website/: ChangeLog.md  Makefile  README.md  drasil-website.cabal  package.yaml  stack.yaml
code/scripts/: ClassInstDepGen.hs  DCConfig.txt  DTG_Config.txt  DataTableCSVtoHTML.py  DataTableGen.hs  DirectoryController.hs  SourceCodeReader.hs  SourceCodeReaderCI.hs  SourceCodeReaderT.hs  SourceCodeReaderTypes.hs  TypeDepGen.hs  TypeGraphGen.hs  check_binary.sh  check_stack.sh  check_whitespace.sh  ci_functions.bash  code_build.sh  code_path.sh  copy_example_assets.sh  count_words.sh  deploy.bash  deploy_stage.sh  deploy_wrapper.bash  duplicate_string_find.sh  duplicate_string_get_information.sh  gooltest_build.sh  log_check.sh  make_docs.sh  maybe_test_deploy.sh  mdBook_assets.sh  mock_deploy.sh  pr_label_update.py  prepare_deployment.sh  tex_build.sh  update_default_stackage.sh
code/stable/: README.md
code/stable-website/: index.html
code/website/: Main.hs  Makefile  StringUtils.hs  index.html  package.yaml  site.hs  stack.yaml  website.cabal
(+18342 files in other folders)
