Name:		drasil
Version:	0.0.6
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software

library
  exposed-modules:
    Language.Drasil,
    Data.Drasil.SI_Units
    Data.Drasil.Concepts.Documentation
    Data.Drasil.Concepts.Thermodynamics
    Data.Drasil.Concepts.PhysicalProperties
    Data.Drasil.Concepts.Physics
    Data.Drasil.Concepts.Software
    Data.Drasil.Concepts.Math
    Data.Drasil.Quantities.Thermodynamics
    Data.Drasil.Quantities.Physics
    Data.Drasil.Quantities.Math
    Data.Drasil.Units.Thermodynamics
  other-modules:
      Language.Drasil.Expr
    , Language.Drasil.Chunk
    , Language.Drasil.Config
    , Language.Drasil.Document
    , Language.Drasil.Format
    , Language.Drasil.Generate
    , Language.Drasil.Misc
    , Language.Drasil.Recipe
    , Language.Drasil.RefHelpers
    , Language.Drasil.Reference
    , Language.Drasil.Spec
    , Language.Drasil.Symbol
    , Language.Drasil.SymbolAlphabet
    , Language.Drasil.Unicode
    , Language.Drasil.Unit
    , Language.Drasil.CCode.AST
    , Language.Drasil.CCode.Helpers
    , Language.Drasil.CCode.Import
    , Language.Drasil.CCode.Print
    , Language.Drasil.HTML.AST
    , Language.Drasil.HTML.Helpers
    , Language.Drasil.HTML.Import
    , Language.Drasil.HTML.Print
    , Language.Drasil.HTML.Monad
    , Language.Drasil.TeX.AST
    , Language.Drasil.TeX.Helpers
    , Language.Drasil.TeX.Import
    , Language.Drasil.TeX.Print
    , Language.Drasil.TeX.Monad
    , Language.Drasil.TeX.Preamble
    , Language.Drasil.Chunk.Eq
    , Language.Drasil.Chunk.LC
    , Language.Drasil.Chunk.MUChunk
    , Language.Drasil.Chunk.Method
    , Language.Drasil.Chunk.Module
    , Language.Drasil.Chunk.Other
    , Language.Drasil.Chunk.Relation
    , Language.Drasil.Chunk.Req
    , Language.Drasil.Chunk.Unital
    , Language.Drasil.Expr.Extract
    , Language.Drasil.Make.AST
    , Language.Drasil.Make.Helpers
    , Language.Drasil.Make.Import
    , Language.Drasil.Make.Print
    , Language.Drasil.Output.Formats
    , Language.Drasil.Printing.Helpers
    , Language.Drasil.Template.DD
    , Language.Drasil.Template.Helpers
    , Language.Drasil.Template.MG
    , Language.Drasil.Template.MIS
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1
  default-language: Haskell2010
  ghc-options:      -Wall

executable tiny
  hs-source-dirs: Example
  main-is: Drasil/HGHC/Main.hs
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall -O2

executable pcm
  hs-source-dirs: Example
  main-is: Drasil/PCM/Main.hs
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall -O2

executable ssp
  hs-source-dirs: Example
  main-is: Drasil/SSP/Main.hs
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall

executable glassbr
  hs-source-dirs: Example
  main-is: Drasil/GlassBR/Main.hs
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall

executable chipmunkdocs
  hs-source-dirs: Example
  main-is: Drasil/GamePhysics/Main.hs
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable swhs
  hs-source-dirs: Example
  main-is: Drasil/SWHS/Main.hs
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: git://github.com/JacquesCarette/literate-scientific-software.git
  subdir: code
