Name:		drasil
Version:	0.0.8
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software

library
  exposed-modules:
    Language.Drasil,
    Language.Drasil.Code,
    Data.Drasil.People
    Data.Drasil.Changes
    Data.Drasil.Citations
    Data.Drasil.Modules
    Data.Drasil.Plurals
    Data.Drasil.SentenceStructures
    Data.Drasil.SI_Units
    Data.Drasil.Utils
    Data.Drasil.Concepts.Computation
    Data.Drasil.Concepts.Documentation
    Data.Drasil.Concepts.Thermodynamics
    Data.Drasil.Concepts.PhysicalProperties
    Data.Drasil.Concepts.Education
    Data.Drasil.Concepts.Physics
    Data.Drasil.Concepts.Software
    Data.Drasil.Concepts.Math
    Data.Drasil.Concepts.SolidMechanics
    Data.Drasil.Software.Products
    Data.Drasil.Quantities.Thermodynamics
    Data.Drasil.Quantities.PhysicalProperties
    Data.Drasil.Quantities.Physics
    Data.Drasil.Quantities.Math
    Data.Drasil.Quantities.SolidMechanics
    Data.Drasil.Units.Thermodynamics
    Data.Drasil.Units.PhysicalProperties
    Data.Drasil.Units.Physics
    Data.Drasil.Units.SolidMechanics
  other-modules:
      Language.Drasil.SystemInformation
    , Language.Drasil.Expr
    , Language.Drasil.Expr.Math
    , Language.Drasil.Chunk
    , Language.Drasil.Citations
    , Language.Drasil.Config
    , Language.Drasil.Document
    , Language.Drasil.Format
    , Language.Drasil.Generate
    , Language.Drasil.Misc
    , Language.Drasil.NounPhrase
    , Language.Drasil.People
    , Language.Drasil.Recipe
    , Language.Drasil.RefHelpers
    , Language.Drasil.Reference
    , Language.Drasil.Space
    , Language.Drasil.Spec
    , Language.Drasil.Symbol
    , Language.Drasil.SymbolAlphabet
    , Language.Drasil.Unicode
    , Language.Drasil.Unit
    , Language.Drasil.CodeSpec
    , Language.Drasil.Code.Code
    , Language.Drasil.Code.Import
    , Language.Drasil.Code.Imperative.AST
    , Language.Drasil.Code.Imperative.Import
    , Language.Drasil.Code.Imperative.Helpers
    , Language.Drasil.Code.Imperative.LanguageRenderer
    , Language.Drasil.Code.Imperative.LanguageRenderer.CppRenderer
    , Language.Drasil.Code.Imperative.LanguageRenderer.CSharpRenderer
    , Language.Drasil.Code.Imperative.LanguageRenderer.GOOLRenderer
    , Language.Drasil.Code.Imperative.LanguageRenderer.JavaRenderer
    , Language.Drasil.Code.Imperative.LanguageRenderer.LuaRenderer
    , Language.Drasil.Code.Imperative.LanguageRenderer.ObjectiveCRenderer
    , Language.Drasil.Code.Imperative.LanguageRenderer.PythonRenderer
    , Language.Drasil.Code.CodeGeneration
    , Language.Drasil.Code.Imperative.Parsers.ConfigParser
    , Language.Drasil.HTML.AST
    , Language.Drasil.HTML.Helpers
    , Language.Drasil.HTML.Import
    , Language.Drasil.HTML.Print
    , Language.Drasil.HTML.Monad
    , Language.Drasil.TeX.AST
    , Language.Drasil.TeX.Helpers
    , Language.Drasil.TeX.Import
    , Language.Drasil.TeX.Print
    , Language.Drasil.TeX.Monad
    , Language.Drasil.TeX.Preamble
    , Language.Drasil.Chunk.Code
    , Language.Drasil.Chunk.CommonIdea
    , Language.Drasil.Chunk.Concept
    , Language.Drasil.Chunk.ConVar
    , Language.Drasil.Chunk.Constrained
    , Language.Drasil.Chunk.Eq
    , Language.Drasil.Chunk.ExprRelat
    , Language.Drasil.Chunk.LC
    , Language.Drasil.Chunk.Method
    , Language.Drasil.Chunk.Module
    , Language.Drasil.Chunk.NamedIdea
    , Language.Drasil.Chunk.Other
    , Language.Drasil.Chunk.Quantity
    , Language.Drasil.Chunk.Relation
    , Language.Drasil.Chunk.Req
    , Language.Drasil.Chunk.SymbolForm
    , Language.Drasil.Chunk.Theory
    , Language.Drasil.Chunk.UncertainQuantity
    , Language.Drasil.Chunk.Unital
    , Language.Drasil.Chunk.Unitary
    , Language.Drasil.Chunk.VarChunk
    , Language.Drasil.Chunk.Wrapper
    , Language.Drasil.Chunk.Wrapper.QSWrapper
    , Language.Drasil.Chunk.Wrapper.UWrapper
    , Language.Drasil.ChunkDB
    , Language.Drasil.Expr.Extract
    , Language.Drasil.Make.AST
    , Language.Drasil.Make.Helpers
    , Language.Drasil.Make.Import
    , Language.Drasil.Make.Print
    , Language.Drasil.Output.Formats
    , Language.Drasil.Printing.Helpers
    , Language.Drasil.Defs
    , Language.Drasil.DataDesc

  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    parsec >= 3.1.9
  default-language: Haskell2010
  ghc-options:      -Wall

executable tiny
  hs-source-dirs: Example
  main-is: Drasil/HGHC/Main.hs
  other-modules:
      Drasil.HGHC.HGHC
    , Drasil.HGHC.HeatTransfer
    , Drasil.HGHC.Modules
    , Drasil.Sections.TableOfSymbols
    , Drasil.Sections.ReferenceMaterial
    , Drasil.Sections.TableOfAbbAndAcronyms
    , Drasil.Sections.ScopeOfTheProject
    , Drasil.Sections.TraceabilityMandGs
    , Drasil.Sections.GeneralSystDesc
    , Drasil.DocumentLanguage
    , Drasil.DocumentLanguage.Chunk.GenDefn
    , Drasil.DocumentLanguage.Definitions
    , Drasil.Sections.AuxiliaryConstants
    , Drasil.Sections.TableOfUnits
    , Drasil.Template.DD
    , Drasil.Template.Helpers
    , Drasil.Template.MG
    , Drasil.Template.MIS
    , Drasil.Sections.SpecificSystemDescription
    , Drasil.Sections.SolutionCharacterSpec
    , Drasil.Sections.Stakeholders
    , Drasil.SRS
    , Drasil.Sections.Introduction
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall -O2

executable nopcm
  hs-source-dirs: Example
  main-is: Drasil/NoPCM/Main.hs
  other-modules:
      Drasil.NoPCM.Body
    , Drasil.NoPCM.TMods
    , Drasil.NoPCM.Unitals
    , Drasil.NoPCM.Definitions
    , Drasil.NoPCM.DataDesc
    , Drasil.NoPCM.Unitals
    , Drasil.SWHS.Assumptions
    , Drasil.SWHS.Body
    , Drasil.SWHS.Concepts
    , Drasil.SWHS.DataDefs
    , Drasil.SWHS.DataDesc
    , Drasil.SWHS.GenDefs
    , Drasil.SWHS.Changes
    , Drasil.SWHS.LikelyChanges
    , Drasil.SWHS.Modules
    , Drasil.SWHS.References
    , Drasil.SWHS.Reqs
    , Drasil.SWHS.Requirements
    , Drasil.SWHS.TMods
    , Drasil.SWHS.IMods
    , Drasil.SWHS.Unitals
    , Drasil.Sections.TraceabilityMandGs
    , Drasil.Sections.ReferenceMaterial
    , Drasil.Sections.AuxiliaryConstants
    , Drasil.Sections.Stakeholders
    , Drasil.Sections.ScopeOfTheProject
    , Drasil.SRS
    , Drasil.Sections.TableOfAbbAndAcronyms
    , Drasil.DocumentLanguage
    , Drasil.DocumentLanguage.Chunk.GenDefn
    , Drasil.DocumentLanguage.Definitions
    , Drasil.Sections.SpecificSystemDescription
    , Drasil.Sections.Introduction
    , Drasil.Sections.Requirements
    , Drasil.Sections.GeneralSystDesc
    , Drasil.Sections.TableOfSymbols
    , Drasil.Sections.TableOfUnits
    , Drasil.Template.DD
    , Drasil.Template.Helpers
    , Drasil.Template.MG
    , Drasil.Template.MIS
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall -O2

executable ssp
  hs-source-dirs: Example
  main-is: Drasil/SSP/Main.hs
  other-modules:
      Drasil.Sections.ReferenceMaterial
    , Drasil.SRS
    , Drasil.SSP.Assumptions
    , Drasil.SSP.Body
    , Drasil.SSP.Changes
    , Drasil.SSP.DataDefs
    , Drasil.SSP.DataDesc
    , Drasil.SSP.Defs
    , Drasil.SSP.GenDefs
    , Drasil.SSP.Goals
    , Drasil.SSP.IMods
    , Drasil.SSP.Modules
    , Drasil.SSP.References
    , Drasil.SSP.Reqs
    , Drasil.SSP.Requirements
    , Drasil.SSP.TMods
    , Drasil.SSP.Unitals
    , Drasil.Sections.TableOfAbbAndAcronyms
    , Drasil.Sections.TableOfSymbols
    , Drasil.Sections.Stakeholders
    , Drasil.Sections.ScopeOfTheProject
    , Drasil.Sections.TraceabilityMandGs
    , Drasil.DocumentLanguage
    , Drasil.DocumentLanguage.Chunk.GenDefn
    , Drasil.DocumentLanguage.Definitions
    , Drasil.Sections.TableOfUnits
    , Drasil.Sections.AuxiliaryConstants
    , Drasil.Template.DD
    , Drasil.Template.Helpers
    , Drasil.Template.MG
    , Drasil.Template.MIS
    , Drasil.Sections.SpecificSystemDescription
    , Drasil.Sections.Introduction
    , Drasil.Sections.Requirements
    , Drasil.Sections.GeneralSystDesc
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall

executable glassbr
  hs-source-dirs: Example
  main-is: Drasil/GlassBR/Main.hs
  other-modules:
      Drasil.DocumentLanguage
    , Drasil.DocumentLanguage.Chunk.GenDefn
    , Drasil.DocumentLanguage.Definitions
    , Drasil.GlassBR.Body
    , Drasil.GlassBR.Changes
    , Drasil.GlassBR.Concepts
    , Drasil.GlassBR.Unitals
    , Drasil.GlassBR.Modules
    , Drasil.GlassBR.Reqs
    , Drasil.GlassBR.TMods
    , Drasil.GlassBR.IMods
    , Drasil.GlassBR.DataDefs
    , Drasil.GlassBR.References
    , Drasil.GlassBR.Units
    , Drasil.GlassBR.Interpolation
    , Drasil.GlassBR.DataDescriptions
    , Drasil.Sections.SpecificSystemDescription
    , Drasil.Sections.Introduction
    , Drasil.Sections.Requirements
    , Drasil.Sections.GeneralSystDesc
    , Drasil.Sections.TraceabilityMandGs
    , Drasil.Sections.AuxiliaryConstants
    , Drasil.Sections.Stakeholders
    , Drasil.Sections.ScopeOfTheProject
    , Drasil.Sections.ReferenceMaterial
    , Drasil.SRS
    , Drasil.Sections.TableOfAbbAndAcronyms
    , Drasil.Sections.TableOfSymbols
    , Drasil.Sections.TableOfUnits
    , Drasil.Template.DD
    , Drasil.Template.Helpers
    , Drasil.Template.MG
    , Drasil.Template.MIS
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall

executable chipmunkdocs
  hs-source-dirs: Example
  main-is: Drasil/GamePhysics/Main.hs
  other-modules:
      Drasil.DocumentLanguage
    , Drasil.DocumentLanguage.Chunk.GenDefn
    , Drasil.DocumentLanguage.Definitions
    , Drasil.GamePhysics.Body
    , Drasil.GamePhysics.Changes
    , Drasil.GamePhysics.Concepts
    , Drasil.GamePhysics.DataDefs
    , Drasil.GamePhysics.Modules
    , Drasil.GamePhysics.Reqs
    , Drasil.GamePhysics.TMods
    , Drasil.GamePhysics.Unitals
    , Drasil.GamePhysics.IMods
    , Drasil.Sections.SpecificSystemDescription
    , Drasil.Sections.SolutionCharacterSpec
    , Drasil.Sections.GeneralSystDesc
    , Drasil.Sections.Introduction
    , Drasil.Sections.Requirements
    , Drasil.Sections.TraceabilityMandGs
    , Drasil.Sections.ReferenceMaterial
    , Drasil.Sections.AuxiliaryConstants
    , Drasil.Sections.Stakeholders
    , Drasil.Sections.ScopeOfTheProject
    , Drasil.SRS
    , Drasil.Sections.TableOfAbbAndAcronyms
    , Drasil.Sections.TableOfSymbols
    , Drasil.Sections.TableOfUnits
    , Drasil.Template.DD
    , Drasil.Template.Helpers
    , Drasil.Template.MG
    , Drasil.Template.MIS
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall
  
executable swhs
  hs-source-dirs: Example
  main-is: Drasil/SWHS/Main.hs
  other-modules:
      Drasil.DocumentLanguage
    , Drasil.DocumentLanguage.Chunk.GenDefn
    , Drasil.DocumentLanguage.Definitions
    , Drasil.Sections.SpecificSystemDescription
    , Drasil.Sections.Introduction
    , Drasil.Sections.Requirements
    , Drasil.Sections.GeneralSystDesc
    , Drasil.Sections.TraceabilityMandGs
    , Drasil.Sections.ReferenceMaterial
    , Drasil.Sections.ScopeOfTheProject
    , Drasil.SRS
    , Drasil.SWHS.Assumptions
    , Drasil.SWHS.Body
    , Drasil.SWHS.Changes
    , Drasil.SWHS.Concepts
    , Drasil.SWHS.DataDefs
    , Drasil.SWHS.DataDesc
    , Drasil.SWHS.GenDefs
    , Drasil.SWHS.Generate
    , Drasil.SWHS.LikelyChanges
    , Drasil.SWHS.Modules
    , Drasil.SWHS.References
    , Drasil.SWHS.Reqs
    , Drasil.SWHS.Requirements
    , Drasil.SWHS.TMods
    , Drasil.SWHS.IMods
    , Drasil.SWHS.Unitals
    , Drasil.Sections.TableOfAbbAndAcronyms
    , Drasil.Sections.TableOfSymbols
    , Drasil.Sections.TableOfUnits
    , Drasil.Sections.AuxiliaryConstants
    , Drasil.Sections.Stakeholders
    , Drasil.Template.DD
    , Drasil.Template.Helpers
    , Drasil.Template.MG
    , Drasil.Template.MIS
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: git://github.com/JacquesCarette/literate-scientific-software.git
  subdir: code
